--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="jmbyJvOaS-djJzLZz-JVg1YB0Dkiy2TLpHGWprYbA-I" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/4469/4469371.png" type="image/png">
 
